--- a/src/theme.css
+++ b/src/theme.css
@@ -3,6 +3,9 @@
 * {
     box-sizing: border-box;
 }
+[v-cloak] {
+    display: none;
+}
 
 body {
     font-family: Inter, Roboto, Oxygen, Fira Sans, Helvetica Neue, sans-serif;
